--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ python = "^3.11"
 [tool.poetry.group.prod.dependencies]
 snscrape = "^0.7.0.20230622"
 pandas = "^2.2.2"
+minio = "^7.2.7"
 
 
 [tool.poetry.group.dev.dependencies]
