add dvc pipeline

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-PG_USER=mlflow
-PG_PASSWORD=mlflow
-PG_DATABASE=mlflow
-MLFLOW_BUCKET_NAME=parser
-AWS_ACCESS_KEY_ID=access_key
-AWS_SECRET_ACCESS_KEY=secret_key
-MLFLOW_S3_ENDPOINT_URL=http://localhost:9000
-MLFLOW_TRACKING_URI=http://localhost:5000
+# key_id: e877c694f46e64740b3fe6a50dcdb739
+# key_secret: 1d9e5743c2dda58d039a45c1d3b9113f
+
+aws_access_key_id = "7360e237-d11f-4989-add5-16dbb5ff0703:e877c694f46e64740b3fe6a50dcdb739"
+aws_secret_access_key = "1d9e5743c2dda58d039a45c1d3b9113f"
