--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,11 @@ python = "^3.11"
 [tool.poetry.group.prod.dependencies]
 snscrape = "^0.7.0.20230622"
 pandas = "^2.2.2"
-minio = "^7.2.7"
 dvc = "^3.50.2"
 boto3 = "^1.34.108"
 python-dotenv = "^1.0.1"
-mlflow = "^2.12.2"
 scikit-learn = "^1.4.2"
+nltk = "^3.8.1"
 
 
 [tool.poetry.group.dev.dependencies]
